--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.26.0",
+    "@chakra-ui/next-js": "^2.4.2",
+    "@chakra-ui/react": "2",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
